# job-assistant

./: .gitignore  Makefile  README.md  install.sh  pyproject.toml  run-notion-server.sh  usage-guide.md
src/job_tracker/: audio_proc.py  gmail_client.py  main.py  mcp_client.py  notion_client.py  notion_templates.py  state.py  utils.py
tests/: test_notion_client.py
