[tool.poetry]
name = "job-tracker-mcp"
version = "0.1.0"
description = "Job search tracker using MCP to integrate with Notion and Gmail"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "job_tracker", from = "src"}]

[tool.poetry.dependencies]
anthropic = "0.49.0"
python = "^3.11"
mcp = "1.5.0"
whisper = "1.1.10"
python-dotenv = "1.1.0"
pydantic = "2.10.6"
asyncio = "3.4.3"
openai = "1.66.3"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"
black = "25.1.0"
isort = "6.0.1"
flake8 = "7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
job-tracker = "job_tracker.main:run_main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest]
testpaths = ["tests"]